# voxel-world

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  TODO  a.out  cmake_install.cmake  deleteme.cpp  temp.cpp
source/: BROKEN_AF  Chunk.cpp  Chunk.hpp  Cube.cpp  Cube.hpp  README.md  TODO  World.cpp  World.hpp  cscope.out  documentation.cfg  global.hpp  main.cpp  makefile  out.txt  tags  wavefront-loader.cpp  wavefront-loader.hpp
source/Assets/Objs/: cube.mtl  cube.obj.pos
source/Assets/Textures/: .Face_Orientation.png-autosave.kra  Face_Orientation.png~
source/Helpers/: cout-definitions.cpp  cout-definitions.hpp  system-libraries.hpp  tools.cpp  tools.hpp  wavefront-loader.cpp  wavefront-loader.hpp
source/Rendering/: OpenGL-Wrappers.cpp  OpenGL-Wrappers.hpp  Renderer.cpp  Renderer.hpp  Rendering.cpp  Rendering.hpp  Window-Management.cpp  Window-Management.hpp  context-creation.cpp  context-creation.hpp  rendering.cpp  rendering.hpp
source/Rendering/Camera/: Camera.cpp  Camera.hpp
source/Rendering/Shaders/: 3D-shader-fragment.glsl  3D-shader-geometry.glsl  3D-shader-vertex.glsl  CubeFaceVertexShader.glsl  Fragment-Shader-3D.glsl  Fragment-Shader-Depth.glsl  FragmentShader.glsl  Geometry-Shader-Depth.glsl  Vertex-Shader-3D.glsl  Vertex-Shader-Depth.glsl  VertexShader.glsl  Voxel-renderer-fragment.glsl  Voxel-renderer-geometry.glsl  Voxel-renderer-vertex.glsl  fragment.glsl  geometry.glsl  test-fragment.glsl  test-vertex.glsl  vertex.glsl
source/Shaders/: VertexShader.glsl
source/documentation/html/: annotated.html  classes.html  dir_1b0e926a0431d9f734411ceeac6bd06a.html  dir_31d546a7220d2d0f2290ebc917bc5425.html  dir_bbe6ea98138ce911aa61c49f1d4d2233.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  globals_vars.html  index.html  menudata.js
source/documentation/html/d0/da2/: classcirArray.html
source/documentation/html/d0/dbb/: World_8hpp.html  World_8hpp_source.html
source/documentation/html/d0/dbc/: classCube-members.html
source/documentation/html/d1/d52/: classRenderer.html
source/documentation/html/d1/d8d/: classcirArray-members.html
source/documentation/html/d1/df0/: classCamera.html
source/documentation/html/d2/d62/: OpenGL-Wrappers_8cpp.html
source/documentation/html/d3/d31/: OpenGL-Wrappers_8hpp.html  OpenGL-Wrappers_8hpp_source.html
source/documentation/html/d3/d62/: tools_8cpp.html
source/documentation/html/d3/df2/: classChunk__Holder.html
source/documentation/html/d4/d36/: classRenderer-members.html
source/documentation/html/d4/d8b/: wavefront-loader_8cpp.html
source/documentation/html/d4/d94/: classChunk__Holder-members.html
source/documentation/html/d4/dd0/: Cube_8hpp.html  Cube_8hpp_source.html
source/documentation/html/d4/de0/: classShader-members.html
source/documentation/html/d4/deb/: Window-Management_8hpp.html  Window-Management_8hpp_source.html
source/documentation/html/d5/d79/: structLight.html
source/documentation/html/d6/d05/: Cube_8cpp.html
source/documentation/html/d6/d39/: classWorld.html
source/documentation/html/d6/d57/: classObject__3D.html
source/documentation/html/d6/d80/: Camera_8hpp.html  Camera_8hpp_source.html
source/documentation/html/d6/d97/: classTexture.html
source/documentation/html/d6/dfa/: structLight-members.html
source/documentation/html/d7/d91/: wavefront-loader_8hpp.html  wavefront-loader_8hpp_source.html
source/documentation/html/d7/dfe/: World_8cpp.html
source/documentation/html/d8/d2b/: classWorld-members.html
source/documentation/html/d9/d69/: classShader.html
source/documentation/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  enums_0.js  enums_1.js  enumvalues_0.js  files_0.js  files_2.js  files_3.js  files_4.js  files_5.js  (+36 more)
source/documentation/latex/: annotated.tex  dir_1b0e926a0431d9f734411ceeac6bd06a.tex  dir_31d546a7220d2d0f2290ebc917bc5425.tex  dir_bbe6ea98138ce911aa61c49f1d4d2233.tex  files.tex  refman.aux  refman.idx  refman.ilg  refman.ind  refman.out  refman.tex  refman.toc
source/logs/: TODO_0.0.1
source/middleware/stb/: stb_image.h
source/rendering/: Camera.cpp  Camera.hpp  context-creation.cpp  context-creation.hpp  rendering-commons.hpp  rendering.cpp  rendering.hpp
source/rendering/Camera/: Camera.cpp  Camera.hpp
(+48 files in other folders)
